@@ -10,6 +10,10 @@ Bugs fixed
 - :mod:`pandas` conversion is now correctly handling R data frames with duplicated
   column names. They were dropped tbefore that (issue #925).
 
+- :mod:`pandas` conversion is now correctly handling R data frames with nested
+  columns (issue #930).
+
+
 Changes
 -------
 
